# pythran

./: .appveyor.yml  .clang-format  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS  Changelog  MANIFEST.in  MANUAL  README  README.rst  TODO  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflow/: workflow.yml
.github/workflows/: arm.yml  asan.yml  codspeed.yml  core.yml  dist.yml  doc.yml  freethreading.yml  i686.yml  icc.yml  no-setuptools.yml  parallel.yml  pythonic.yml  stable-api.yml  system-dep.yml  windows.yml
cgen/: __init__.py
doc/: CLI.rst  DEVGUIDE  DEVGUIDE.rst  INTERNAL.rst  MANUAL  MANUAL.rst  TUTORIAL  TUTORIAL.rst
doc/TP/: enonce  mandel.py  origin.py
docs/: CLI.rst  DEVGUIDE.rst  EXAMPLES.rst  INTERNAL.rst  MANUAL.rst  Makefile  TUTORIAL.rst  conf.py  requirements.txt
docs/examples/: Distutils Sample Project.ipynb  Third Party Libraries.ipynb
extensions/: pythranmagic.py
omp/: __init__.py
pythonic++/: Makefile.am  acinclude.m4  configure.ac  pythonic++.h  pythonic++.pc.in
pythonic++/core/: intrinsics.h  parallel.h  sequence.h  utils.h
pythonic++/modules/: math.h
pythonic++/tests/: Makefile.am  test_none.cpp  test_range.cpp
pythran/: __init__.py  analysis.py  backend.py  cli.py  compat.py  config.py  conversion.py  cxx_header_generator.py  cxxgen.py  cxxtypes.py  dist.py  errors.py  frontend.py  graph.py  interface.py  interval.py  intrinsic.py  jit.py  log.py  magic.py  metadata.py  middlend.py  openmp.py  optimizations.py  passes.py  passmanager.py  preprocessor.py  pythran-darwin.cfg  pythran-default.cfg  pythran-linux.cfg  pythran-linux2.cfg  pythran-win32.cfg  pythran.cfg  pythran.h  pythran.py  pythran_gmp.h  range.py  run.py  spec.py  syntax.py  (+6 more)
pythran/analyses/: __init__.py  aliases.py  ancestors.py  argument_effects.py  argument_read_once.py  ast_matcher.py  bound_expressions.py  bounded_expressions.py  cfg.py  constant_expressions.py  dependencies.py  extended_syntax_check.py  extract_function_type_annotations.py  extract_function_types.py  fixed_size_list.py  global_declarations.py  global_effects.py  globals_analysis.py  has_break.py  has_continue.py  has_return.py  identifiers.py  immediates.py  imported_ids.py  inlinable.py  intrinsics.py  is_assign.py  is_assigned.py  lazyness_analysis.py  literals.py  local_decl.py  local_declarations.py  locals_analysis.py  movable.py  node_count.py  optimizable_comprehension.py  ordered_global_declarations.py  parallel_maps.py  potential_iterator.py  pure_expressions.py  (+7 more)
pythran/benchmarks/: benchmark_runner.py  test_benchmark.py
pythran/optimizations/: __init__.py  binop_identities.py  comprehension_patterns.py  constant_folding.py  constant_reciprocal.py  dead_code_elimination.py  expand_boolean_operator.py  fast_gexpr.py  forward_substitution.py  gen_exp_to_imap.py  inlining.py  (+14 more)
pythran/tests/test_distutils/: a.py  b.py  meson.build  pythran.rc  setup.py
scripts/: pythran  pythran-config
website/: Makefile  conf.py  os.css  support.py
(+3072 files in other folders)
