# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([pythonic++],[0.0.1],[serge.guelton@telecom-bretagne.eu])
AM_INIT_AUTOMAKE([foreign 1.0])

# for tests only
AC_PROG_CXX

# c++0x is mandatory !
AC_COMPILE_STDCXX_0X

# Generate Makefiles
AC_CONFIG_FILES([Makefile pythonic++.pc tests/Makefile])
AC_OUTPUT
